--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -57,13 +57,13 @@ glx-copy-from-front = false;
 # Enabled client-side shadows on windows.
 shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 25;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = -25;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = -20;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = .99;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -82,6 +82,7 @@ shadow-exclude = [
     "name = 'xfce4-notifyd'",
     "name = 'cpt_frame_window'",
     "name *= 'VLC'",
+    "name *= 'tint2'",
     "name *= 'compton'",
     "name *= 'picom'",
     "name *= 'Chromium'",
@@ -109,22 +110,19 @@ shadow-ignore-shaped = false;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
-inactive-opacity-override = false;
+inactive-opacity-override = true;
 
 # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
+inactive-dim = 0.0;
 # Do not let dimness adjust based on window opacity.
-# inactive-dim-fixed = true;
+inactive-dim-fixed = true;
+
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
-blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
-];
+blur-background-fixed = true;
 
 #################################
 #
@@ -153,9 +151,9 @@ fade-exclude = [ ];
 #################################
 
 # Try to detect WM windows and mark them as active.
-mark-wmwin-focused = true;
+mark-wmwin-focused = false;
 # Mark all non-WM but override-redirect windows active (e.g. menus).
-mark-ovredir-focused = true;
+mark-ovredir-focused = false;
 # Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
 # Usually more reliable but depends on a EWMH-compliant WM.
 use-ewmh-active-win = true;
