--- a/termite/config
+++ b/termite/config
@@ -5,8 +5,8 @@
 #cell_height_scale = 1.0
 #cell_width_scale = 1.0
 clickable_url = true
-#dynamic_title = true
-font = Monospace 9
+dynamic_title = true
+font = Monaco 10
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
@@ -46,9 +46,9 @@ scrollbar = right
 #cursor = #dcdccc
 #cursor_foreground = #dcdccc
 
-foreground = #ededf4
-foreground_bold = #ffffff
-background = #110f0f
+foreground = #d1cdc0
+foreground_bold = #d1cdc0
+background = #24211e
 
 # 20% background transparency (requires a compositor)
 #background = rgba(63, 63, 63, 0.8)
